# undernet-development-env

./: .gitmodules  Dockerfile.gnuworld  Dockerfile.ircu2  README.md  docker-compose  docker-compose.yml
dbinit/: dbinit.sh  healthcheck.sh
etc/: hub.conf  hub.motd  leaf.conf  leaf.motd
etc/gnuworld/: ccontrol.conf  cservice.conf  dronescan.conf  gnuworld.conf  logging.properties  openchanfix.conf
patches/: log4c-alpine-compat+log-paths.patch
sim/: README.md  pyproject.toml
sim/sim/: cli.py  client.py  config.py  db.py  simulation.py  words.py
sim/tests/: test_password.py  test_words.py
